Fix word wrap

--- a/themes/wada811/static/css/styles.css
+++ b/themes/wada811/static/css/styles.css
@@ -42,6 +42,8 @@ pre code {
 
 .post-content {
     margin-bottom: 20px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .post-rels {
